--- a/style.css
+++ b/style.css
@@ -120,6 +120,9 @@ a{
 .sec03 h4{
   font-size: 24px;
   color: #fff;
+  height: 100%;
+  text-align: center;
+  line-height: 1.5;
 }
 .sec05 .donatetext span{
   font-size: 48px;
@@ -167,6 +170,7 @@ a{
   margin: 10px 0px;
   /* border-radius: 30px; */
   border: 3px solid #000;
+  width: 100%;
 }
 
 .sec06 p{
@@ -252,10 +256,11 @@ box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.5);
   color: #FDB338;
   text-decoration: none;
 }
-.
+
 section{
   padding: 150px 0px;
 }
+
 .buttonstyle01{
   background-color: #FDB338;
   padding: 10px 25px;
@@ -325,6 +330,7 @@ section{
   height: auto;
   z-index: 3;
   transform: scale(1.1);
+  object-fit: contain;
 }
 .sec02 .left02{
   z-index: 99;
@@ -360,6 +366,7 @@ section{
   box-sizing: border-box;
   padding: 50px 30px;
   background-color: #fff;
+  overflow: hidden;
 }
 .sec05 .singledonate:hover{
   border: 5px solid #000;
