--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ a{
   margin: 10px 0px;
   display: inline-block;
 }
-.sec05 .dnum{
+.sec05 .dnums{
   font-size: 18px;
   color: #000;
   background-color: #FFEBBA;
